<resources>
    <string name="app_name">Pipit</string>

    <!-- LoginMain -->
    <string name="introduce_pipit_text"><u>피핏을 소개합니다!</u></string>
    <!-- Login -->
    <string name="login">로그인</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="lost_id_password">아이디/비밀번호를 잊으셨나요?</string>
    <string name="find_id_underline"><u>아이디 찾기</u></string>
    <string name="reset_password_underline"><u>비밀번호 재설정</u></string>
    <string name="wrong_id_password">아이디 또는 비밀번호가 잘못 입력되었어요!</string>
    <!-- PortalCertify -->
    <string name="portal_certify">포탈 인증</string>
    <!-- FindIdResult -->
    <string name="find_id">아이디 찾기</string>
    <string name="find_id_fail_explanation">해당 계정으로 가입된 아이디가 없어요!</string>
    <string name="find_id_success_explanation">포탈 정보와 일치하는 아이디에요!</string>
    <!-- AccountCertify -->
    <string name="account_certify">계정 인증</string>
    <!-- ResetPassword -->
    <string name="new_password">새 비밀번호</string>
    <string name="reset_password">비밀번호 재설정</string>
    <!-- ResetPasswordResult -->
    <string name="changed_password_explanation">비밀번호가 변경되었어요!</string>
    <!-- Signup -->
    <string name="signup">회원가입</string>
    <string name="signup_explanation">본인 학번으로 1개의 아이디만 인증 가능합니다.\n신입생은 수험번호와 생년월일로 인증할 수 있어요 :)</string>
    <string name="authentication_guide"><u>학번인증 안내</u></string>
    <string name="portal_id_title">숙명포탈 ID(학번)</string>
    <string name="portal_password_title">숙명포탈 비밀번호</string>
    <string name="processing_policy"><u>이용약관 및 개인정보 처리방침</u></string>
    <string name="use_portal_authentication"><u>포탈인증이용</u></string>
    <string name="agree_and_continue">동의하고 계속하기</string>
    <!-- Join -->
    <string name="signup_explanation2">이제 다 왔어요!</string>
    <string name="join_password_title">비밀번호 (8~16자, 영문 숫자 조합)</string>
    <string name="join_password_helper">비밀번호는 8~16자의 영문과 숫자 조합이여야 해요!</string>
    <string name="re_enter_password">비밀번호 재입력</string>
    <string name="subscription_complete">가입 완료</string>
    <!-- Welcome -->
    <string name="nice_to_meet_you">만나서 반가워요!</string>
    <string name="welcome_explanation">한 눈에 보는 학교 공지!\n피핏과 함께 똑똑한 학교생활 시작해볼까요?</string>
    <string name="ok">확인</string>
    <string name="set_push_notice">푸시 알림을 설정해주세요!</string>
    <string name="setting_explanation">푸시 알림을 설정하면 원하는 학교 공지 알림을\n빠르게 받을 수 있어요!</string>
    <string name="set_up">설정하기</string>
    <!-- Main(Home) -->
    <string name="home">홈</string>
    <string name="entire">전체</string>
    <string name="bachelor">학사</string>
    <string name="scholarship">장학</string>
    <string name="graduation">졸업</string>
    <string name="employment">취업</string>
    <string name="qualification">스펙</string>
    <string name="exchange">교환</string>
    <string name="event">행사</string>
    <string name="contest">공모전</string>
    <string name="lecture">강연</string>
    <string name="snack">간식배부</string>
    <string name="bookmark">책갈피</string>
    <string name="alert">알림</string>
    <string name="mypage">마이페이지</string>
    <string name="saved_bookmark_explanation">책갈피에 저장되었어요!</string>
    <string name="unsaved_bookmark_explanation">책갈피가 해제되었어요!</string>
    <!-- EditTab -->
    <string name="edit_tab">탭 편집</string>
    <!-- Setting -->
    <string name="setting">설정</string>
    <string name="logout">로그아웃</string>
    <string name="change_password">비밀번호 변경</string>
    <string name="ask">문의하기</string>
    <string name="open_licence">오픈소스 라이선스</string>
    <string name="withdrawal">회원 탈퇴</string>
    <!-- Withdrawal -->
    <string name="really_withdrawal">정말 탈퇴하시겠어요?</string>
    <string name="withdrawal_explanation">회원 탈퇴 시, 저장된 알림 목록이 전부 삭제되며\n다시 복구하실 수 없습니다.</string>
    <string name="leaving">탈퇴하기</string>
    <string name="cancel">취소하기</string>
    <!-- WebView -->
    <string name="saved">저장됨</string>
    <string name="save">저장하기</string>
    <!-- Bookmark -->
    <string name="empty_bookmark_explanation">책갈피 목록이 비어있어요!</string>
    <string name="empty_add_bookmark_explanation">책갈피를 추가하면 여기에 표시됩니다.</string>
    <!-- Alert -->
    <string name="alert_setting">알림 설정</string>
    <string name="alert_setting_explanation">푸시 알림을 받고 싶은 키워드를 선택하세요.\n해당 키워드에 속한 공지를 피핏이 알려드릴게요!</string>
    <!-- ChangePassword -->
    <string name="check_password">비밀번호 확인</string>
    <string name="type_using_password">현재 사용중인 비밀번호를 입력해주세요!</string>
    <string name="using_password">현재 비밀번호</string>
    <string name="lost_password">비밀번호를 잊으셨나요?</string>
    <string name="type_new_password">새 비밀번호를 입력해주세요!</string>
</resources>