<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/bottom_sheet_behavior"
        app:behavior_peekHeight="482dp"
        app:behavior_hideable="false">

        <TextView
            android:id="@+id/welcomeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_push_notice"
            android:layout_marginTop="24dp"
            android:textAppearance="@style/welcomeTitleStyle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/welcomeExplanation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_explanation"
            android:layout_marginTop="@dimen/main_margin"
            android:gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcomeTitle"/>

        <TextView
            android:id="@+id/settingButton"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:text="@string/set_up"
            style="@style/blueButtonStyle"
            android:layout_marginStart="@dimen/main_margin"
            android:layout_marginEnd="@dimen/main_margin"
            android:layout_marginBottom="@dimen/main_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcomeExplanation"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>