<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.SignupPortalActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_margin="@dimen/main_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/loginLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textAppearance="@style/loginLabelStyle"
        android:layout_marginTop="32dp"
        android:layout_marginStart="@dimen/main_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBar"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" (1/2)"
        android:textAppearance="@style/signupNumberLabelStyle"
        app:layout_constraintLeft_toRightOf="@id/loginLabel"
        app:layout_constraintBaseline_toBaselineOf="@id/loginLabel"/>
    <TextView
        android:id="@+id/signupExplanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_explanation"
        android:textSize="14sp"
        android:textColor="@color/gray800"
        android:layout_marginTop="12dp"
        android:layout_marginStart="@dimen/main_margin"
        app:layout_constraintTop_toBottomOf="@id/loginLabel"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/authenticationGuideBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authentication_guide"
        android:textAppearance="@style/loginTextButtonStyle"
        android:layout_marginStart="@dimen/signup_text_btn_margin"
        android:layout_marginTop="9dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signupExplanation"/>

    <!-- id box -->
    <ImageView
        android:id="@+id/portalIdBox"
        android:layout_width="330dp"
        android:layout_height="66dp"
        android:layout_marginTop="33dp"
        android:layout_marginStart="@dimen/main_margin"
        android:layout_marginEnd="@dimen/main_margin"
        app:layout_constraintTop_toBottomOf="@id/authenticationGuideBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/idBoxTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/portal_id_title"
        android:textAppearance="@style/loginTextBoxTitleStyle"
        android:layout_marginStart="@dimen/main_margin"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/portalIdBox"
        app:layout_constraintTop_toTopOf="@id/portalIdBox" />
    <EditText
        android:id="@+id/portalIdText"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="@dimen/main_margin"
        android:layout_marginEnd="@dimen/main_margin"
        android:layout_marginBottom="8dp"
        android:hint="@string/portal_id_hint"
        android:textColorHint="@color/gray200"
        android:textAppearance="@style/loginTextBoxStyle"
        android:background="@null"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="@id/portalIdBox"
        app:layout_constraintStart_toStartOf="@id/portalIdBox"
        app:layout_constraintEnd_toEndOf="@id/portalIdBox"/>

    <!-- password box -->
    <ImageView
        android:id="@+id/portalPasswordBox"
        android:layout_width="330dp"
        android:layout_height="66dp"
        android:layout_marginTop="@dimen/main_margin"
        android:layout_marginStart="@dimen/main_margin"
        android:layout_marginEnd="@dimen/main_margin"
        app:layout_constraintTop_toBottomOf="@id/portalIdBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/passwordBoxTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/portal_password_title"
        android:textAppearance="@style/loginTextBoxTitleStyle"
        android:layout_marginStart="@dimen/main_margin"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/portalPasswordBox"
        app:layout_constraintTop_toTopOf="@id/portalPasswordBox" />
    <EditText
        android:id="@+id/portalPasswordText"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="@dimen/main_margin"
        android:layout_marginEnd="@dimen/main_margin"
        android:layout_marginBottom="8dp"
        android:hint="@string/password_hint"
        android:textColorHint="@color/gray200"
        android:textAppearance="@style/loginTextBoxStyle"
        android:background="@null"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="@id/portalPasswordBox"
        app:layout_constraintStart_toStartOf="@id/portalPasswordBox"
        app:layout_constraintEnd_toEndOf="@id/portalPasswordBox"/>

    <TextView
        android:id="@+id/policyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/processing_policy"
        android:textAppearance="@style/loginTextButtonStyle"
        android:layout_marginStart="@dimen/signup_text_btn_margin"
        android:layout_marginTop="41dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/portalPasswordBox"/>
    <TextView
        android:id="@+id/usePortalAuthenticationBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_portal_authentication"
        android:textAppearance="@style/loginTextButtonStyle"
        android:layout_marginTop="10dp"
        android:layout_marginStart="@dimen/signup_text_btn_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/policyBtn" />

    <ImageView
        android:id="@+id/agreeBtn"
        android:layout_width="330dp"
        android:layout_height="56dp"
        android:layout_margin="@dimen/main_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>